My first website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="box-top"></div>
         <div class="box-in">
           <h2>Welcome to my website</h2>
-          <p>Hello My Name is Shubham. I m and Engineering Student I Take Seminar on Cyber Securtiy and Git Hub I a Tech Geek. I love to Code in Various Languages and Love to do Innovation for the Society and Today i m Going to Tech you Git HUB and you are going to Love it</p>
+          <p>Hhello..my name is Vaishnavi Gaikar..Be original..Be you</p>
           <br />
           <h2><strong>My Expirence From Arduino and GITHUB</strong></h2>
           <ul class="main-list">
